# database-dimension

./: .cursorrules  pyproject.toml
documentation/: database_dimension_package_directory_structure.md
source_code/database_dimension/v1/: __init__.py  data_model_handler.py  mongodb_base_model.py  mongodb_client.py
source_code/database_dimension/v1/data_models/: quality_comparison.py  text_item.py  time_range.py
tests/: test_importing_this_package.py
